# hello-actuator

./: CMakeLists.txt  README.md
data/: calibration.csv
include/: actuator.h
src/: actuator.cpp
tests/: main.cpp
